@@ -35,6 +35,7 @@ permittedValues = matrix(c(
   'vibratoFreq', 5, 1, 10, .5,
   'vibratoDep', 0, 0, 3, 0.125,
   'shimmerDep', 0, 0, 100, 1,
+  'shimmerLen', 1, 1, 100, 1,
   'attackLen', 50, 0, 200, 10,
   'rolloff', -9, -30, 0, 1,
   'glottisAnchors', 0, 0, 1000, 5,
@@ -101,6 +102,7 @@ defaults = list(
   vibratoFreq = 5,
   vibratoDep = 0,
   shimmerDep = 0,
+  shimmerLen = 1,
   attackLen = 50,
   rolloff = -9,
   rolloffOct = -3,
